First update of Carte des desserts section

--- a/index.html
+++ b/index.html
@@ -8,19 +8,33 @@
     </head>
     <body>
     <div class="container-fluid">
-
         <div class="row">
-            <div class="col-xs-12 col-md-3 brown"><img src="Images/burger1.png"></div>
-            <div class="col-xs-12 col-md-3">Burgers Vegetariens</div>
-            <div class="col-xs-12 col-md-3">Challenger</div>
-            <div class="col-xs-12 col-md-3"><img src="Images/wrap1.png"></div>
+            <div class="col-xs-12 col-md-3 redflame"><img src="Images/burger1.png">
+                <p>Nos Burgers</p>
+            </div>
+            <div class="col-xs-12 col-md-3 yellow"><img src="Images/wrap1.png">
+                <p>XL Wraps !</p>
+            </div>
+            <div class="col-xs-12 col-md-3 redflame"><img src="Images/challenger.png">
+                <p>Challenger !</p>
+            </div>
+            <div class="col-xs-12 col-md-3 yellow"><img src="Images/pimp.png">
+                <p>Pimp Burger</p></div>
         </div>
 
         <div class="row">
-            <div class="col-xs-12 col-md-3">Salades</div>
-            <div class="col-xs-12 col-md-3">Pimp up</div>
-            <div class="col-xs-12 col-md-3">Boissons</div>
-            <div class="col-xs-12 col-md-3">Desserts</div>
+            <div class="col-xs-12 col-md-3 yellow"><img src="Images/salades.png">
+                <p>Salades</p>
+            </div>
+            <div class="col-xs-12 col-md-3 redflame"><img src="Images/dessert.png">
+                <p>Desserts</p>
+            </div>
+            <div class="col-xs-12 col-md-3 yellow"><img src="Images/boissons.png">
+            <p>Boissons</p>
+            </div>
+            <div class="col-xs-12 col-md-3 redflame"><img src="Images/cafe.png">
+            <p>Boissons chaudes</p>
+            </div>
         </div>
     </div>
 
