restaurant menu update on devguillaume branch

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Moony</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <link href="style.css" rel="stylesheet">
@@ -11,29 +12,77 @@
         <div class="row">
             <div class="col-xs-12 col-md-3 redflame"><img src="Images/burger1.png">
                 <p>Nos Burgers</p>
+                <div class="overlayleft">
+                    <div class="text">
+                        <h3>Moony Classic</h3>
+                        <p>Boeuf, cheddar, tomate, salade, oignon</p>
+                        <h3>Chicken</h3>
+                        <p>Poulet pane, cheddar, tomate, salade, oignon</p>
+                        <h3>Savoyard</h3>
+                        <p>Boeuf, Bacon, raclette, serrano, cheddar, tomate, salade, oignon</p>
+                    </div>
+                </div>
             </div>
+
             <div class="col-xs-12 col-md-3 yellow"><img src="Images/wrap1.png">
                 <p>XL Wraps !</p>
+                <div class="overlayright">
+                    <div class="text">
+                        <h3>Hamlet</h3>
+                        <p>Jambon blanc, mozzarella, concombre, tomate, salade</p>
+                        <h3>Chica Chic</h3>
+                        <p>Poulet, brebis, oignons, poivrons, salade</p>
+                        <h3>Hotchill</h3>
+                        <p>Boeuf épicé, fromage, poivrons, oignons, tabasco, salade, moutarde</p>
+                    </div>
+                </div>
             </div>
+
             <div class="col-xs-12 col-md-3 redflame"><img src="Images/challenger.png">
                 <p>Challenger !</p>
+                <div class="overlayleft">
+                    <div class="text">
+                        <p> Quatre étages de boeuf & Cheddar, bacon, rosti de pomme de terre, tomate salade oignon</p>
+
+                    </div>
+                </div>
             </div>
+
             <div class="col-xs-12 col-md-3 yellow"><img src="Images/pimp.png">
-                <p>Pimp Burger</p></div>
+                <p>Pimp Burger</p>
+                <div class="overlayright">
+                    <div class="text">
+                        <p>Pimp</p>
+
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="row">
             <div class="col-xs-12 col-md-3 yellow"><img src="Images/salades.png">
                 <p>Salades</p>
+                <div class="overlayleft">
+                    <div class="text">Nos salades</div>
+                </div>
             </div>
             <div class="col-xs-12 col-md-3 redflame"><img src="Images/dessert.png">
                 <p>Desserts</p>
+                <div class="overlayright">
+                    <div class="text">Nos desserts</div>
+                </div>
             </div>
             <div class="col-xs-12 col-md-3 yellow"><img src="Images/boissons.png">
             <p>Boissons</p>
+                <div class="overlayleft">
+                    <div class="text">Nos Boissons</div>
+                </div>
             </div>
             <div class="col-xs-12 col-md-3 redflame"><img src="Images/cafe.png">
             <p>Boissons chaudes</p>
+                <div class="overlayright">
+                    <div class="text">Nos boissons chaudes</div>
+                </div>
             </div>
         </div>
     </div>
