Big update on the menu

--- a/index.html
+++ b/index.html
@@ -52,7 +52,16 @@
                 <p>Pimp Burger</p>
                 <div class="overlayright">
                     <div class="text">
-                        <p>Pimp</p>
+                        <p>Ajoutez vos ingrédients à votre Burger !
+                        <br />
+                            Steack / Oeuf / Bacon
+                            <br />
+                            Rosti / Cheddar / Brebis
+                            <br />
+                            Chèvre / Foie gras / Salade verte
+
+
+                        </p>
 
                     </div>
                 </div>
@@ -63,7 +72,13 @@
             <div class="col-xs-12 col-md-3 yellow"><img src="Images/salades.png">
                 <p>Salades</p>
                 <div class="overlayleft">
-                    <div class="text">Nos salades</div>
+                    <div class="text">
+                        <h3>Salades maison</h3>
+                        <p>Retrouvez toutes nos salades, composées selon la saison et le marché</p>
+
+
+
+                    </div>
                 </div>
             </div>
             <div class="col-xs-12 col-md-3 redflame"><img src="Images/dessert.png">
