Burger menu finished

--- a/index.html
+++ b/index.html
@@ -81,22 +81,35 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-md-3 redflame"><img src="Images/dessert.png">
+            <div class="col-xs-12 col-md-3 redflame"><img src="Images/boissons.png">
                 <p>Desserts</p>
                 <div class="overlayright">
-                    <div class="text">Nos desserts</div>
+                    <div class="text">
+                        <h3>Boissons</h3>
+                        <p>Retrouvez toutes nos boissons, alcoolisées ou non dans votre restaurant<br />
+                            <span class="disclaimer">L'abus d'alcool est dangereux pour la santé, à consommer avec modération</span>
+                        </p>
+
+
+                    </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-md-3 yellow"><img src="Images/boissons.png">
-            <p>Boissons</p>
+            <div class="col-xs-12 col-md-3 yellow"><img src="Images/dessert.png">
+            <p>Desserts</p>
                 <div class="overlayleft">
-                    <div class="text">Nos Boissons</div>
+                    <div class="text">
+                        <h3>Desserts</h3>
+                        <p>Retrouvez tous nos desserts, mis à jour selon l'humeur du chef<br /></p>
+                    </div>
                 </div>
             </div>
             <div class="col-xs-12 col-md-3 redflame"><img src="Images/cafe.png">
             <p>Boissons chaudes</p>
                 <div class="overlayright">
-                    <div class="text">Nos boissons chaudes</div>
+                    <div class="text">
+                        <h3>Nos boissons chaudes</h3>
+                        <p>A toute heure, retrouvez en restaurant notre carte de cafés et chocolats chauds<br /></p>
+                    </div>
                 </div>
             </div>
         </div>
