Update carteDuRestaurant, contact, map, foodora and a little footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row2">
             <div class="col-xs-12 col-md-3 redflame"><img src="Images/burger1.png">
                 <p>Nos Burgers</p>
                 <div class="overlayleft">
@@ -68,7 +68,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row2">
             <div class="col-xs-12 col-md-3 yellow"><img src="Images/salades.png">
                 <p>Salades</p>
                 <div class="overlayleft">
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-md-3 redflame"><img src="Images/boissons.png">
-                <p>Desserts</p>
+                <p>Boissons</p>
                 <div class="overlayright">
                     <div class="text">
                         <h3>Boissons</h3>
