Add section class in css

--- a/contactmap.html
+++ b/contactmap.html
@@ -8,6 +8,7 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+<section class="contactmap">
 <div class="container-fluid">
     <div class="row1">
         <div class="col-xs-12 col-md-12">
@@ -98,7 +99,10 @@
             <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyDHLwTkjQdInieAjFA2tDetgne1-ytINMc '></script><div style='overflow:hidden;height:298px;width:382px;'><div id='gmap_canvas' style='height:298px;width:382px;'></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div> <a href='https://embedmaps.net'>embed google maps directions</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=349922a165f6aa5c81073bded8ff903bcedaa826'></script><script type='text/javascript'>function init_map(){var myOptions = {zoom:12,center:new google.maps.LatLng(44.8346539,-0.5666396999999961),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(44.8346539,-0.5666396999999961)});infowindow = new google.maps.InfoWindow({content:'<strong>Moony</strong><br>28 place meynard<br> Bordeaux<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
         </div>
     </div>
+</div>
+</section>
 
+<section class="foot">
     <div class="row3">
         <div class="col-xs-12 col-md-12 redflame">
             <p><a href="#">CGU</a> - <a href="#">Mentions légales</a> - <a href="#">A propos</a></p>
@@ -106,10 +110,12 @@
             <p>Designed and built with all the love in the universe by Cante'Loupe</p>
         </div>
     </div>
+</section>
 
 
 
 </div>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
