--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
+    <section class="menurestaurant">
     <div class="container-fluid">
         <div class="row2">
             <div class="col-xs-12 col-md-3 redflame"><img src="Images/burger1.png">
@@ -114,6 +115,7 @@
             </div>
         </div>
     </div>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
