beautiful certificats created

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <head>
+<head xmlns="http://www.w3.org/1999/html">
         <title>Moony</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
@@ -115,6 +115,34 @@
             </div>
         </div>
     </div>
+    </section>
+
+    <section class="certificat">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12 col-md-4">
+                    <img src="Images/macaron1.png">
+                    <span class="fries">Frites <br /> Maison</span>
+                    <span class="norelief">100%</span>
+                </div>
+
+                <div class="col-xs-12 col-md-4">
+                    <img src="Images/macaron2.png">
+                    <span class="bread">PAIN BOULANGER</span>
+                    <div class="stars">
+                         <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+                         <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+                         <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-md-4">
+                    <img src="Images/macaron3.png">
+                    <span class="vbf">100% VBF</span>
+                    <img src="Images/icon_boeuf.png" alt="Miam le boeuf français" class="boeuf">
+                </div>
+            </div>
+        </div>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
